k8s/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: cryptostock.market.sample
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8543
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8543
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8543
          - path: /health-check
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8543
          - path: /django_static/
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8543
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
